aligns copyright footer to the right, fixes video html tag and adjusts header and subheader sizes and weights

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,14 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 
 }
+h1{
+    font-weight: normal;
+    font-size: 50px;
+}
+.subheading {
+    font-weight: 300;
+    font-size: 42px;
+}
 .link {
     color:aquamarine;
     font-size:16px;
@@ -12,4 +20,9 @@ body {
 .description {
     color:gray;
     font-size: 21px;
+}
+.copyright{
+    color: gray;
+    text-align: right;
+    font-size: 20px;
 }
